generator client {
  provider = "prisma-client"
  output   = "../app/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id         String   @id @default(cuid())
  email      String   @unique
  password   String? // Null for OAuth users
  provider   String? // e.g., "github", "google", or null for manual users
  providerId String? // OAuth provider's user ID
  isVerified Boolean  @default(false)
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  profile    Profile? // Relation to Profile
}

model Profile {
  id                String           @id @default(cuid())
  userId            String           @unique
  firstName         String
  lastName          String
  username          String           @unique
  role              Role
  bio               String?          @db.VarChar(500) // Optional, max length 500 characters
  profilePicture    String? // URL to the user's profile picture
  socialLinks       Json? // JSON for social links like Instagram, Twitter, etc.
  likedTracksPublic Boolean          @default(true) // Whether liked tracks are visible to other users
  createdAt         DateTime         @default(now())
  updatedAt         DateTime         @updatedAt
  user              User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  beats             Beat[] // Relation to beats uploaded by this producer
  likes             Like[]
  comments          Comment[]
  following         Follow[]         @relation("Following")
  followers         Follow[]         @relation("Followers")
  plays             Play[] // Tracks plays by this user
  trackPreference   TrackPreference? // Producer's default track preferences
  notifications     Notification[]   @relation("ReceivedNotifications")
  sentNotifications Notification[]   @relation("SentNotifications")
  orders            Order[]
  orderItems        OrderItem[]      @relation("BuyerOrderItems")
}

model TrackPreference {
  id             String   @id @default(cuid())
  profileId      String   @unique
  description    String?  @db.VarChar(1000) // Default description template
  genre          String? // Default genre preference
  priceBasic     Float?   @default(29.99)
  pricePremium   Float?   @default(49.99)
  priceExclusive Float?   @default(199.99)
  isPublished    Boolean  @default(true) // Default publish status
  tags           String[] @default([]) // Default tags
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  profile        Profile  @relation(fields: [profileId], references: [id], onDelete: Cascade)

  @@index([profileId])
}

model Beat {
  id         String   @id @default(cuid())
  title      String
  producerId String // ID of the producer (Profile)
  genre      String // e.g., "Hip-Hop", "Trap", "R&B"
  bpm        Int // Beats per minute
  key        String? // Musical key, e.g., "C", "Am", "D#"
  duration   Int // Duration in seconds
  tags       String[] // Array of tags, e.g., ["Dark", "Melodic", "808"]

  // License pricing
  priceBasic      Float // MP3 tagged
  pricePremium    Float // WAV untagged + MP3 tagged
  priceExclusive  Float // Full rights, removes from store
  isExclusiveSold Boolean @default(false)
  exclusiveBuyer  String? // User ID who bought exclusive rights

  coverImage    String // URL to cover image
  audioFileMp3  String // URL to MP3 file (tagged)
  audioFileWav  String // URL to WAV file (untagged)
  description   String?        @db.VarChar(1000)
  isPublished   Boolean        @default(false)
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  producer      Profile        @relation(fields: [producerId], references: [id], onDelete: Cascade)
  likes         Like[]
  comments      Comment[]
  plays         Play[] // All plays for this beat
  notifications Notification[]
  orderItems    OrderItem[]

  @@index([genre])
  @@index([bpm])
  @@index([key])
  @@index([isPublished])
  @@index([isExclusiveSold])
  @@index([createdAt])
}

model Like {
  id        String   @id @default(cuid())
  profileId String
  beatId    String
  createdAt DateTime @default(now())

  profile Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  beat    Beat    @relation(fields: [beatId], references: [id], onDelete: Cascade)

  @@unique([profileId, beatId])
  @@index([beatId])
  @@index([profileId])
}

model Comment {
  id        String   @id @default(cuid())
  profileId String
  beatId    String
  text      String   @db.VarChar(500)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  profile Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  beat    Beat    @relation(fields: [beatId], references: [id], onDelete: Cascade)

  @@index([beatId])
  @@index([profileId])
}

model Follow {
  id                 String   @id @default(cuid())
  followerProfileId  String
  followingProfileId String
  createdAt          DateTime @default(now())

  follower  Profile @relation("Following", fields: [followerProfileId], references: [id], onDelete: Cascade)
  following Profile @relation("Followers", fields: [followingProfileId], references: [id], onDelete: Cascade)

  @@unique([followerProfileId, followingProfileId])
  @@index([followingProfileId])
}

model Play {
  id             String   @id @default(cuid())
  profileId      String? // Nullable for guest/anonymous plays
  beatId         String
  listenDuration Int? // Seconds the user actually listened
  createdAt      DateTime @default(now())

  profile Profile? @relation(fields: [profileId], references: [id], onDelete: Cascade)
  beat    Beat     @relation(fields: [beatId], references: [id], onDelete: Cascade)

  @@index([beatId])
  @@index([profileId])
  @@index([createdAt])
}

enum Role {
  PRODUCER
  LISTENER
}

enum NotificationType {
  LIKE
  COMMENT
  FOLLOW
  SALE
}

model Notification {
  id          String           @id @default(cuid())
  recipientId String
  actorId     String
  type        NotificationType
  beatId      String?
  orderItemId String?
  isRead      Boolean          @default(false)
  createdAt   DateTime         @default(now())

  recipient Profile    @relation("ReceivedNotifications", fields: [recipientId], references: [id], onDelete: Cascade)
  actor     Profile    @relation("SentNotifications", fields: [actorId], references: [id], onDelete: Cascade)
  beat      Beat?      @relation(fields: [beatId], references: [id], onDelete: Cascade)
  orderItem OrderItem? @relation(fields: [orderItemId], references: [id], onDelete: Cascade)

  @@index([recipientId, isRead])
  @@index([recipientId, createdAt])
  @@index([actorId])
}

model BlacklistedToken {
  id        String   @id @default(cuid())
  tokenHash String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([tokenHash])
  @@index([expiresAt])
}

enum LicenseType {
  BASIC
  PREMIUM
  EXCLUSIVE
}

enum OrderStatus {
  PENDING
  COMPLETED
  FAILED
}

model Order {
  id              String      @id @default(cuid())
  buyerId         String
  status          OrderStatus @default(PENDING)
  totalAmount     Float
  stripeSessionId String?     @unique
  stripePaymentId String?
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt

  buyer Profile     @relation(fields: [buyerId], references: [id], onDelete: Cascade)
  items OrderItem[]

  @@index([buyerId])
  @@index([stripeSessionId])
}

model OrderItem {
  id          String      @id @default(cuid())
  orderId     String
  beatId      String
  buyerId     String
  licenseType LicenseType
  price       Float
  createdAt   DateTime    @default(now())

  order         Order          @relation(fields: [orderId], references: [id], onDelete: Cascade)
  beat          Beat           @relation(fields: [beatId], references: [id], onDelete: Cascade)
  buyer         Profile        @relation("BuyerOrderItems", fields: [buyerId], references: [id], onDelete: Cascade)
  notifications Notification[]

  @@index([orderId])
  @@index([beatId])
  @@index([buyerId])
}
